@@ -1,4 +1,0 @@
-/* config.hin.  Generated automatically from configure.in by autoheader.  */
-
-/* Define if you have the <pthread.h> header file.  */
-#undef HAVE_PTHREAD_H
