@@ -21,7 +21,6 @@
 
 AC_PREREQ(2.13)
 AC_INIT(gdb.base)
-AC_CONFIG_HEADER(config.h:config.hin)
 
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
