@@ -1,26 +1,4 @@
 #include <stdio.h>
-
-#include "config.h"
-
-#ifndef HAVE_PTHREAD_H
-
-/* Don't even try to compile.  In fact, cause a syntax error that we can
-   look for as a compiler error message and know that we have no pthread
-   support.  In that case we can just suppress the test completely. */
-
-#error "no posix threads support"
-
-#else
-
-/* OK.  We have the right header.  If we try to compile this and fail, then
-   there is something wrong and the user should know about it so the testsuite
-   should issue an ERROR result.. */
-
-#ifdef __linux__
-#define  _MIT_POSIX_THREADS 1	/* GNU/Linux (or at least RedHat 4.0)
-                                   needs this */
-#endif
-
 #include <pthread.h>
 
 /* Under OSF 2.0 & 3.0 and HPUX 10, the second arg of pthread_create
@@ -77,4 +55,3 @@ main (int argc, char *argv[])
   return 0;
 }
 
-#endif /* ifndef HAVE_PTHREAD_H */
